--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,12 @@
 		</dependency>
 
 
+		<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-oauth2-client -->
+		<dependency>
+		    <groupId>org.springframework.security</groupId>
+		    <artifactId>spring-security-oauth2-client</artifactId>
+		    <version>5.6.2</version>
+		</dependency>
 		
 
 
