feature oauth2 by google and github

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,11 @@ spring.jpa.hibernate.ddl-auto=none
 
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
+
+spring.security.oauth2.client.registration.google.client-id=962092584069-b8550m0jd3s0i4nrob92ie7gtrn7tp0g.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.scope=email,profile
+
+spring.security.oauth2.client.registration.github.client-id=ebb55f886b01e4e96744
+spring.security.oauth2.client.registration.github.client-secret=d49bb3007b752d20bd859d4fe6d3bd6b23e8ec5e
+spring.security.oauth2.client.registration.github.scope=email,profile
