--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -36,7 +36,7 @@ jobs:
         MYSQL_HOST: localhost
         MYSQL_PORT: 3306
         MYSQL_USER: root
-        MYSQL_PASSWORD: ''
+        MYSQL_PASSWORD: ""
         MYSQL_DATABASE: studentspring
       run: |
         mysql -h $MYSQL_HOST -P $MYSQL_PORT -u $MYSQL_USER -p$MYSQL_PASSWORD $MYSQL_DATABASE -e "SELECT * FROM your_table;"
