--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 spring.mvc.view.prefix=/views/
 spring.mvc.view.suffix=.jsp
 
-spring.datasource.url=jdbc:mysql://localhost:3306/studentspring
+spring.datasource.url=jdbc:mysql://studentspring.cvs6cig248i6.ap-southeast-2.rds.amazonaws.com:3306/studentspring
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=Manh13062002?
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.dialect=MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
