--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -5,7 +5,6 @@
 # They are provided by a third-party and are governed by
 # separate terms of service, privacy policy, and support
 # documentation.
-
 name: Java CI with Maven
 
 on:
@@ -27,9 +26,11 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
         cache: maven
-    - name: Build with Maven
-      run: mvn clean install
-
-    # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-    - name: Update dependency graph
-      uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+    - name: Install MySQL Connector
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y libmysql-java
+    - name: Check connection status to RDS
+      run: |
+        # You'll need to replace <YOUR_RDS_ENDPOINT>, <YOUR_DB_USERNAME>, <YOUR_DB_PASSWORD>, and <YOUR_DB_NAME> with your actual RDS details
+        mysql -h studentspring.cvs6cig248i6.ap-southeast-2.rds.amazonaws.com -u root -p Manh13062002? -e "USE studentspring"
