--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -33,4 +33,4 @@ jobs:
     - name: Check connection status to RDS
       run: |
         # You'll need to replace <YOUR_RDS_ENDPOINT>, <YOUR_DB_USERNAME>, <YOUR_DB_PASSWORD>, and <YOUR_DB_NAME> with your actual RDS details
-        mysql -h studentspring.cvs6cig248i6.ap-southeast-2.rds.amazonaws.com -u root -p Manh13062002? -e "USE studentspring"
+        mysql -h studentspring.cvs6cig248i6.ap-southeast-2.rds.amazonaws.com -u root -pManh13062002? -e "show databases;"
